# HedgeAI

./: .env.example  .gitignore  Dockerfile  GEMINI.md  POST_MVP.md  README.md  dev.sh  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  requirments.txt
agents/: factory.py
core/: config.py  database.py  engine.py  tasks.py
dashboard/: metadata.json  package-lock.json  package.json
dashboard/app/: page.tsx
dashboard/src/: App.tsx  index.css
docs/: ARCHITECTURE.md  DESIGN.md  GEMINI.md  PLAN.md  PRD.md  SPRINT_PLAN.md  UX doc.md  memory.md  product spec.md  project_dev_log.md  prompts.md  scenario registry.md
go_engine/: go.mod  main.go
go_engine/executor/: jupiter_client.go  okx_client.go  order.go
go_engine/proto/: execution.pb.go  execution.proto  execution_grpc.pb.go
heartbeat/: loop.py
src/agents/: accountant.py  data_oracle.py  eval_agent.py  execution_trader.py  overseer.py  quant_strategist.py  risk_guardian.py
src/api/: main.py
src/auth/: auth_manager.py
src/cli/: main.py
src/core/: kelly_sizer.py
src/execution_bridge/: execution_pb2.py  execution_pb2_grpc.py  grpc_client.py
src/heartbeat/: daemon.py
src/state/: db.py  schema.sql
src/tools/: market_fetcher.py  momentum_scorer.py  narrative_scorer.py  onchain_scorer.py  rar_scorer.py
src/tui/: app.py  widgets.py
src/utils/: logger.py  rate_limiter.py  telegram_notifier.py
tests/integration/: test_paper_trading.py
tests/security/: test_hardcoded_values.py  test_secret_filter.py
tests/unit/: test_daemon.py  test_db.py  (+5 more)
tools/: trading_tools.py
(+25 files in other folders)
